plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ll'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

ext {
	nettyNativeResolverVersion = '4.1.115.Final'
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'com.auth0:java-jwt:4.4.0'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.4.1'
	implementation 'com.h2database:h2'
	implementation 'org.springframework.boot:spring-boot-starter-webflux' // WebClient
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'
	// Ensure Netty can load the native macOS DNS resolver (prevents fallback warning on Mac)
	runtimeOnly "io.netty:netty-resolver-dns-native-macos:${nettyNativeResolverVersion}:osx-aarch_64"
	runtimeOnly "io.netty:netty-resolver-dns-native-macos:${nettyNativeResolverVersion}:osx-x86_64"

	implementation 'nl.martijndwars:web-push:5.1.1'
	implementation 'org.bouncycastle:bcprov-jdk18on:1.79'
}

tasks.named('test') {
	useJUnitPlatform()
}
